--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -1,7 +1,6 @@
 - name: Azure Container Service (AKS)
   href: ./index.yml
-- name: |
-    Översikt
+- name: Översikt
   items:
     - name: Om AKS
       href: intro-kubernetes.md
@@ -36,28 +35,38 @@
       href: container-service-quotas.md
 - name: Instruktionsguider
   items:
-    - name: Skala ett AKS-kluster
-      href: scale-cluster.md
-    - name: Uppgradera ett AKS-kluster
-      href: upgrade-cluster.md
-    - name: Autentisera med ACR
-      href: ../container-registry/container-registry-auth-aks.md?toc=%2fazure%2faks%2ftoc.json
-    - name: Köra program med Helm
-      href: kubernetes-helm.md
-    - name: Utveckla program med Draft
-      href: kubernetes-draft.md
-    - name: Integrera med Azure med OSBA
-      href: integrate-azure.md
-    - name: Använda Kubernetes-instrumentpanelen
-      href: kubernetes-dashboard.md
-    - name: Skapa tjänstens huvudnamn
-      href: kubernetes-service-principal.md
+    - name: Klusteråtgärder
+      items:
+        - name: Skala ett AKS-kluster
+          href: scale-cluster.md
+        - name: Uppgradera ett AKS-kluster
+          href: upgrade-cluster.md
+        - name: Ta bort ett AKS-kluster
+          href: delete-cluster.md
     - name: Konfigurera datavolymer
       items:
         - name: Azure-diskar – permanent volym
           href: azure-disks-dynamic-pv.md
         - name: Azure Files – permanent volym
           href: azure-files-dynamic-pv.md
+    - name: Säkerhet och autentisering
+      items:
+        - name: Skapa tjänstens huvudnamn
+          href: kubernetes-service-principal.md
+        - name: Autentisera med ACR
+          href: ../container-registry/container-registry-auth-aks.md?toc=%2fazure%2faks%2ftoc.json
+    - name: Utveckla och köra program
+      items:
+        - name: Köra program med Helm
+          href: kubernetes-helm.md
+        - name: Utveckla program med Draft
+          href: kubernetes-draft.md
+        - name: Integrera med Azure med OSBA
+          href: integrate-azure.md
+    - name: Grundläggande om Kubernetes
+      items:
+        - name: Använda Kubernetes-instrumentpanelen
+          href: kubernetes-dashboard.md
 - name: Referens
   items:
     - name: Azure CLI
