--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -24,8 +24,6 @@
       href: tutorial-deploy-machine-learning.md
     - name: Distribuera Azure Functions
       href: tutorial-deploy-function.md
-    - name: Skapa en IoT-Edge-distribution med IoT-tillägg för Azure CLI 2.0
-      href: tutorial-create-deployment-with-cli-iot-extension.md
 - name: Instruktionsguider
   items:
     - name: Skapa gatewayer
@@ -34,6 +32,8 @@
           href: how-to-create-transparent-gateway.md
         - name: Modbus-gateway
           href: deploy-modbus-gateway.md
+    - name: Använd IoT-tillägget för Azure CLI 2.0
+      href: tutorial-create-deployment-with-cli-iot-extension.md
     - name: Distribuera och övervaka i skala
       href: how-to-deploy-monitor.md
     - name: Etablera en IoT Core-enhet
