--- a/articles/cosmos-db/index.yml
+++ b/articles/cosmos-db/index.yml
@@ -12,13 +12,13 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 12/05/2017
+  ms.date: 02/14/2018
   ms.author: mimig
-  ms.openlocfilehash: 4b9eb9a46924f7d4915c67cd8724d02ec3861d2c
-  ms.sourcegitcommit: 0e4491b7fdd9ca4408d5f2d41be42a09164db775
+  ms.openlocfilehash: c5a09b76eee27300a7814bba69c5b73f5b2e5aad
+  ms.sourcegitcommit: d1f35f71e6b1cbeee79b06bfc3a7d0914ac57275
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 12/14/2017
+  ms.lasthandoff: 02/22/2018
 abstract:
   description: "Azure Cosmos DB är en globalt distribuerad databas för flera datamodeller. Använd dessa snabbstarter, självstudier och exempel för att utveckla dokument, nyckelvärden, breda kolumner och diagramdatabaser genom att använda populära API:er och programmeringsmodeller. Lär dig sedan att replikera data över flera Azure-regioner och skala dataflödet oberoende av lagringen, samtidigt som du drar nytta av omfattande serviceavtal."
   aside:
@@ -68,7 +68,7 @@ sections:
       - href: /azure/cosmos-db/create-graph-java
       - href: /azure/cosmos-db/create-graph-dotnet
       - href: /azure/cosmos-db/create-graph-nodejs
-      - href: 
+      - href: /azure/cosmos-db/create-graph-python
       - href: /azure/cosmos-db/create-graph-gremlin-console
     - title: Tabell-API
       values:
